<resources>
    <string name="app_name">Background Eraser Master</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <string-array name="text_options">
        <item>Crop</item>
        <item>Filter</item>
        <item>Effect</item>
        <item>Adjust</item>
        <item>HSL</item>
        <item>Layer</item>
    </string-array>

    <string-array name="filters">
        <item>Colors</item>
        <item>Color2</item>
        <item>Duo</item>
        <item>Pink</item>
        <item>Fresh</item>
        <item>Euro</item>
        <item>Dark</item>
        <item>Ins</item>
        <item>Elegant</item>
        <item>Golden</item>
        <item>Tint</item>
        <item>Film</item>
        <item>Lomo</item>
        <item>Movie</item>
        <item>Retro</item>
        <item>BW</item>
    </string-array>

    <string-array name="frames_name">
        <item>Ramadan</item>
        <item>Easter</item>
        <item>Christmas</item>
        <item>Halloween</item>
        <item>Birthday</item>
        <item>Eid</item>
        <item>Diwali</item>
        <item>New Year</item>
        <item>Holi</item>
        <item>Other</item>
    </string-array>

    <string-array name="effect_light">
        <item>Light1</item>
        <item>Light2</item>
        <item>Festival</item>
        <item>Love</item>
        <item>Prism</item>
        <item>Neon</item>
    </string-array>

    <string-array name="effect_texture">
        <item>Dust</item>
        <item>Stains</item>
        <item>Vintage</item>
        <item>Scratch</item>
    </string-array>

    <string-array name="effect_weather">
        <item>snow</item>
        <item>Cloud</item>
        <item>Fog</item>
        <item>Sunlight</item>
    </string-array>

    <string name="waring_out_of_memory">Not enough memory. Please remove images or your program will be crashed.!!!</string>
    <string name="txt_share">Let your true colors shine though Artistic: Photo editor &amp; collage maker.
        \n\nDownload Now: https://bit.ly/3g3WUau</string>

    <string name="background_image">Background Image</string>
    <string name="light_effect">Light Effect</string>
    <string name="resize">Resize</string>
    <string name="rotate">Rotate</string>
    <string name="_90">- 90°</string>
    <string name="crop">Crop</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
    <string name="plus_90">+ 90°</string>
    <string name="close">Close</string>
    <string name="done">Done</string>
    <string name="blend">Blend</string>
    <string name="effect">Effect</string>
    <string name="light">Light</string>
    <string name="texture">Texture</string>
    <string name="weather">Weather</string>
    <string name="gallery">Gallery</string>
    <string name="hue">HUE</string>
    <string name="saturation">SATURATION</string>
    <string name="brightness">BRIGHTNESS</string>
    <string name="icon">Icon</string>
    <string name="text">Text</string>
    <string name="sticker">Sticker</string>
    <string name="border">Border</string>
    <string name="black_icon">Black Icon</string>
    <string name="border_blur">Border Blur</string>
    <string name="done_save">Done|Save</string>
    <string name="reset">Reset</string>
    <string name="warning_out_of_memory" />
    <string name="about">Unleash your creativity with powerful yet \n
        simple editing tools that transform your \n
        photos from ordinary to extraordinary.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="developer_account_link">3DevTech</string>
    <string name="privacy_settings">Privacy settings</string>
    <string name="policy_url">https://sites.google.com/view/3devtechprivacypolicy</string>"


    <!-- **************** PRODUCTION AD'S *******************   -->
    <!--<string name="app_id">ca-app-pub-1193327012273713~5295978804</string>
    <string name="banner_id">ca-app-pub-1193327012273713/9043652120</string>
    <string name="app_open">ca-app-pub-1193327012273713/5184298162</string>
    <string name="interstitial_id">ca-app-pub-1193327012273713/7291586754</string>
    <string name="interstitial_id_2">ca-app-pub-1193327012273713/1437449258</string>
    <string name="mrec_id">ca-app-pub-1193327012273713/3791325446</string>-->

    <!-- **************** TEST AD'S *******************   -->
    <string name="app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="mrec_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="interstitial_id_2">ca-app-pub-3940256099942544/1033173712</string>
    <string name="app_open">ca-app-pub-3940256099942544/9257395921</string>

</resources>
