<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:orientation="vertical"
    tools:context=".LayerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_Bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/body"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:background="@color/windowBackground"
            android:src="@drawable/ic_backarrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_done"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:background="@color/windowBackground"
            android:src="@drawable/ic_done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/shadow2"
        app:layout_constraintTop_toBottomOf="@id/top_Bar"
        app:layout_constraintBottom_toTopOf="@id/bottom_Bar">

        <RelativeLayout
            android:id="@+id/img_frame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ll_layers">

            <ImageView
                android:id="@+id/img_layer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true" />
        </RelativeLayout>

        <!--ll layer-->
        <LinearLayout
            android:id="@+id/ll_layers"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:layout_constraintTop_toBottomOf="@id/img_frame"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/transBackground"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/layer_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:visibility="visible">

                    <LinearLayout
                        android:id="@+id/ll_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/icon"
                            android:src="@drawable/icon_text" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/text"
                            android:textColor="@color/white"
                            android:textSize="11sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_sticker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/sticker"
                            android:src="@drawable/icon_sticker" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/sticker"
                            android:textColor="@color/white"
                            android:textSize="11sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_border"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:src="@drawable/icon_border" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/border"
                            android:textColor="@color/white"
                            android:textSize="11sp" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/border_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/border_back"
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="2dp"
                            android:layout_marginRight="5dp"
                            android:contentDescription="@string/black_icon"
                            android:padding="7dp"
                            android:src="@drawable/icon_back" />

                        <SeekBar
                            android:id="@+id/seekbar_border"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="15dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginEnd="40dp"
                            android:layout_marginRight="40dp"
                            android:max="200"
                            android:paddingBottom="5dp"
                            android:progress="10"
                            android:progressBackgroundTint="@color/white"
                            android:progressTint="@color/text"
                            android:thumbTint="@color/colorPrimary" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/border_blur"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:contentDescription="@string/border_blur" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/list_border"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:visibility="visible" />
                    </LinearLayout>
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_Bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/body">

        <ImageButton
            android:id="@+id/undo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/windowBackground"
            android:src="@drawable/undo"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="Layers"
            android:textColor="@color/text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/redo"
            app:layout_constraintStart_toEndOf="@id/undo"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/redo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/windowBackground"
            android:src="@drawable/ic_redo"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>