<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:orientation="vertical"
    tools:context=".EffectActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_Bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/body"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:background="@color/windowBackground"
            android:src="@drawable/ic_backarrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_done"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:background="@color/windowBackground"
            android:src="@drawable/ic_done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/shadow2"
        app:layout_constraintTop_toBottomOf="@id/top_Bar"
        app:layout_constraintBottom_toTopOf="@id/bottom_Bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/relativeseek">

            <FrameLayout
                android:id="@+id/effect"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/img_Effect"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/overlay_Image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/light_effect"
                    android:scaleType="fitXY"
                    android:visibility="gone" />


            </FrameLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeseek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/ll_effect"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/img_adjust"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:background="@drawable/round_corner"
                android:backgroundTint="@color/colorPrimary"
                android:padding="8dp"
                android:src="@drawable/ic_effect" />

            <SeekBar
                android:id="@+id/seekbar_blend"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/img_adjust"
                android:layout_centerInParent="true"
                android:layout_marginStart="55dp"
                android:max="100"
                android:min="0"
                android:progress="30"
                android:progressTint="@color/white"
                android:thumbTint="@color/colorPrimary" />

            <ImageButton
                android:id="@+id/btn_apply"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:background="@color/windowBackground"
                android:src="@drawable/ic_done" />


        </RelativeLayout>
        <!--ll effect-->
        <LinearLayout
            android:id="@+id/ll_effect"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_effect_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <LinearLayout
                        android:id="@+id/ll_blend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_blend" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/blend"
                            android:textColor="@color/white"
                            android:textSize="11sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_light"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/effect"
                            android:src="@drawable/ic_light" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/light"
                            android:textColor="@color/white"
                            android:textSize="11sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_texture"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_texture" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/texture"
                            android:textColor="@color/white"
                            android:textSize="11sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_weather"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_weather" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/weather"
                            android:textColor="@color/white"
                            android:textSize="11sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_blend_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/effect_back"
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="2dp"
                            android:layout_marginRight="5dp"
                            android:contentDescription="@string/effect"
                            android:padding="5dp"
                            android:src="@drawable/icon_back"
                            android:visibility="gone" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/list_blend_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:visibility="visible" />

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:visibility="visible">

                            <ImageView
                                android:id="@+id/effect_gallery"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp"
                                android:contentDescription="@string/gallery"
                                android:padding="7dp"
                                android:src="@drawable/icon_gallery"
                                android:visibility="gone" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/list_blend"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical" />

                        </LinearLayout>

                    </RelativeLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_Bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/body"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/undo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/windowBackground"
            android:src="@drawable/undo"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="Effect"
            android:textColor="@color/text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/redo"
            app:layout_constraintStart_toEndOf="@id/undo"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/redo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/windowBackground"
            android:src="@drawable/ic_redo"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>